# Elengenix

./: ..env.swp  .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AGENT_BRAIN_FIX_NEEDED.md  AGENT_REVIEW.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIX_NOTES.md  HANDOFF.md  LICENSE  MEMORY.md.example  OVERVIEW_AUTONOMOUS_BB.md  README.md  SECURITY.md  __init__.py  agent.py  agent_brain.py  agent_brain.py.bak  bot.py  bot_utils.py  cli.py  cli_textual.py  config.yaml  config.yaml.bak  config.yaml.example  dependency_manager.py  domains.txt  elengenix_launcher.py  file_relationship_mapper.py  knowledge_loader.py  live_display.py  llm_client.py  main.py  (+27 more)
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
.config/elengenix/: programs_cache.db  setup.json  token_usage.db
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
.opencode/: opencode.json
agents/: __init__.py  agent_conversation.py  agent_council.py  agent_dataclasses.py  agent_executor.py  agent_helpers.py  agent_intent.py  agent_logger.py  agent_modes.py  agent_planner.py  agent_universal.py  critic_agent.py  decision_engine.py  hybrid_agent.py  hybrid_prompts.py  post_processor.py  prompt_builder.py  scan_context.py  scan_loop.py  specialist_agent.py  strategist_agent.py  tui_game.py  vuln_reasoning_phase.py
agents/redteam/: __init__.py  base.py  captain.py  planner.py  recon.py  scanner.py
assets/: e.psd
cli/: interactive.py  live_display.py  textual.py  textual.py,cover  tools_menu.py  tools_menu.py,cover  tui_design.py,cover  ui_components.py  ui_components.py,cover  wizard.py  wizard.py,cover
commands/: __init__.py  __init__.py,cover  mcp_runner.py  mcp_runner.py,cover  registry.py  registry.py,cover  scan.py  scan.py,cover  system.py  system.py,cover  worldclass.py  worldclass.py,cover
core/: __init__.py  __init__.py,cover  agent.py  agent.py,cover  brain.py  brain.py,cover  orchestrator.py  orchestrator.py,cover  scan_engine.py  scan_engine.py,cover
data/: .ai_consent_accepted  conversations.db  cve_database.db  governance_audit.db  mission_state.db  ml_profiles.json  watchman_state.json
data/scripts/: alias_script.py  alias_test.py  alias_war.py  alias_write_and_exec.py  alias_write_and_run.py  dispatch_test.py  hello.py  persistence_check.py  test_agent_script.py  test_dispatch.py  test_runner.py  test_runner.sh
data/sessions/: sess-0513-220326.json
data/vector_memory/: chroma.sqlite3
docs/: TOOL_CATALOG.md  bugfix-session-2026-06-25.md  development-session-2026-06-25.md  final-session-2026-06-25.md  tui-improvements-2026-06-25.md
elengenix/: __init__.py  __init__.py,cover  __main__.py  __main__.py,cover  agent.py  agent.py,cover  brain.py  brain.py,cover  constants.py  constants.py,cover  constitution.py  constitution.py,cover  constitution_engine.py  constitution_engine.py,cover  governance.py  governance.py,cover  loop.py  loop.py,cover  memory.py  memory.py,cover  paths.py  paths.py,cover  scope.py  scope.py,cover  types.py  types.py,cover
elengenix/agent/: __init__.py  __init__.py,cover  agent_memory.py  agent_memory.py,cover  agent_skills.py  agent_skills.py,cover  memory.py  memory.py,cover  vuln_agent.py  vuln_agent.py,cover
elengenix/scanning/: __init__.py  (+46 more)
integrations/: bot.py
knowledge/: __init__.py  methodology.md
mcp/: __init__.py  __init__.py,cover  client.py  client.py,cover  config.py  config.py,cover  manager.py  manager.py,cover  protocol.py  protocol.py,cover  server.py  server.py,cover
pipeline/: __init__.py  phase_registry.py  scope.py  unified.py
prompts/: __init__.py  agent_prompt.txt  system_prompt.txt  vuln_finder_system.txt
redteam_agent/: .env.example  README.md  __init__.py  config.py  executor.py  governance.py  llm.py  main.py  prompts.py  requirements.txt  run.py  setup.sh  state.py
scratch/: find_imports.py  update_theme.py  update_theme_py.py
scripts/: check8_scan.py  gen_logo.py  gen_logo_clean.py  gen_logo_png.py
tests/: API_REFERENCE.md  _pkg_helper.py  conftest.py  debug_path_test.py  test_active_fuzzer.py  test_adaptive_planner.py  test_agent_agent_skills.py  test_agent_autonomy.py  test_agent_base.py  test_agent_brain_coverage.py  test_agent_brain_refactored.py  test_agent_council.py  test_agent_tools.py  test_agents_coverage.py  test_ai_tool_sandbox.py  test_analysis_pipeline_imports.py  test_big_modules_coverage.py  test_bola_tester.py  test_brain.py  test_brain_coverage.py  test_brain_coverage_gap.py  test_breadth_coverage.py  test_chaining_engine.py  test_cli_e2e.py  test_cli_textual_coverage.py  test_command_mcp_runner.py  test_config_wizard.py  test_constitution_engine.py  test_constitution_engine_fixed.py  test_core_coverage.py  test_core_modules.py  test_core_orchestrator.py  test_coverage_analyzer.py  test_coverage_boost.py  test_coverage_final.py  test_coverage_push.py  test_critical_modules.py  test_decision_engine.py  test_deep_coverage.py  test_ecosystem.py  (+108 more)
tools/: __init__.py  access_control_matrix.py  active_fuzzer.py  adaptive_planner.py  agent_bola_bridge.py  agent_reflection.py  ai_config.py  ai_sandbox.py  ai_tool_creator.py  analysis_pipeline.py  api_finder.py  api_reference.md  api_schema_diff.py  api_server.py  arjun_integration.py  auth_session.py  auth_tester.py  auto_detector.py  autonomous_agent.py  base_recon.py  base_scanner.py  bola_harness.py  bola_tester.py  bounty_intelligence.py  bounty_predictor.py  bounty_reporter.py  chaining_engine.py  cloud_scanner.py  command_suggest.py  compliance_engine.py  config_wizard.py  context_compressor.py  conversation_memory.py  cors_checker.py  coverage_analyzer.py  cve_database.py  cvss_calculator.py  dalfox_integration.py  dashboard_server.py  data_facility.py  (+107 more)
tui/: __init__.py  animations.py  command_palette.py  dashboard.py  export.py  findings_display.py  hunt_view.py  keyboard_shortcuts.py  launcher.py  main_menu.py  scan_progress.py  themes.py  visualizations.py  welcome.py
(+11 files in other folders)
